# tauri-finder

./: .gitignore  README.md  TASK2_ANALYSIS.md  package-lock.json  package.json  project_memory.md
docs/blueprints/20260623/: wi-02-markdown-preview-plugin.md  wi-03-preview-enhancement.md  wi-04-layout-engine.md  wi-05-git-status-plugin.md
plan_specta/: context.json  exploration_findings.md  input.txt  plan.md  verify_context.json
scripts/: kill-port-1420.cjs
src/: App.css  App.tsx  bindings.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  clipboard.rs  diff.rs  file_ops.rs  git.rs  highlight.rs  mod.rs  pty.rs  search.rs  system.rs  watcher.rs  write_file.rs
src-tauri/src/commands/mcp/: mod.rs
src-tauri/src/models/: file_entry.rs
src/components/ActivityBar/: ActivityBar.css  ActivityBar.tsx
src/components/AppTabs/: AppTabsBar.css  AppTabsBar.tsx  TabContent.tsx
src/components/ContextMenu/: ContextMenu.css  ContextMenu.tsx
src/components/Dialogs/: ContextMenuSettings.tsx  CreateDialog.tsx  Dialog.css  PropertiesDialog.tsx  QuickCommandDialog.tsx  RenameDialog.tsx  TagDialog.tsx  TagManagerDialog.tsx  index.ts
src/components/FileList/: FileColumns.tsx  (+7 more)
src/hooks/: useContextMenu.ts  useFileSystem.ts  useFileWatcher.ts  useGitStatus.ts  useKeyboard.ts  useTheme.ts
src/layout/: LayoutEngine.tsx  index.ts  types.ts
src/plugins/: DEV_HANDBOOK.md  PluginTabs.tsx  eventBus.ts  index.ts  pluginStore.ts  registry.ts  types.ts
src/stores/: appTabsStore.ts  fileStore.ts  layoutPresetStore.ts  tagStore.ts  themeStore.ts  uiStore.ts
src/types/: file.ts
src/utils/: constants.ts  formatters.ts  fuzzyMatch.ts  invoke.ts  mergePaths.ts
(+35 files in other folders)
